--- a/PREVISÃO-CEP/index.html
+++ b/PREVISÃO-CEP/index.html
@@ -18,7 +18,7 @@
 
     <form method="get" action=".">
 
-        <h2>CONSULTA DE CEP E CLIMA</h2>
+        <h2 class="a">CONSULTA DE CEP E CLIMA</h2>
 
         <br />
 
@@ -49,14 +49,6 @@
         <label>ESTADO:
             <input name="uf" type="text" id="uf" size="2" />
         </label>
-
-        <br />
-
-        <label>IBGE:
-            <input name="ibge" type="text" id="ibge" size="8" />
-        </label>
-
-        <br />
 
         <h2 class="cidade">Tempo em São Paulo</h2>
         
